# WebServiceTemplate

./: .gitignore  AGENTS.md  Makefile  README.md  vibe-coding-propositions.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
backend/: AGENTS.md  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  health.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: user.py
backend/tests/: test_health.py
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
frontend/: AGENTS.md  Dockerfile  Dockerfile.dev  package.json  playwright.config.ts
frontend/e2e/: home.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts
scripts/: create-project-db.sh  deploy-to-devbox.sh  init-project.sh  setup-npm-hosts.sh  setup-subdomain.sh
